# projects-api

./: .env.example  .pdm-python  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
backend/: Dockerfile  conftest.py
backend/config/: server.py  settings.py
backend/database/: base.py  connection.py  session.py
backend/database/migrations/: alembic.ini  env.py
backend/database/migrations/versions/: 6b02984ab58b_.py  f77c284f64e1_.py
backend/src/api/: __init__.py
backend/src/api/projects/: router.py
backend/src/api/tests/: test_projects.py
backend/src/controllers/: base.py  projects.py
backend/src/controllers/tests/: test_base_controller.py
backend/src/models/: __init__.py  mixin.py  projects.py
backend/src/projects/: models.py
backend/src/repositories/: base.py  excepions.py
backend/src/repositories/projects/: repo.py  types.py
backend/src/repositories/tests/: test_base_repository.py
backend/src/tests/: factories.py
backend/src/utils/: types.py
